# AI-Fiance

./: .gitignore  .rgignore  AGENTS.md  README.md  plan.md  pyproject.toml  requirements.txt
config/: README.md  asset_aliases.yaml  catalyst_profiles.yaml  config.advanced.example.yaml  config.briefing_fast.yaml  config.briefing_ultrafast.yaml  config.etf_pick_fast.yaml  config.etf_pick_skip_proxy.yaml  config.example.yaml  config.fund_pick_proxy_news.yaml  config.review.yaml  config.stock_pick_fast.yaml  config.stock_pick_ultrafast.yaml  event_calendar.yaml  market_monitors.yaml  market_overview.yaml  news_feeds.briefing_light.yaml  news_feeds.empty.yaml  news_feeds.yaml  rules.yaml  stock_pools.yaml  stock_pools_review.yaml  strategy_batches.yaml  stress_scenarios.yaml  watchlist.yaml
data/: industry_chain.json  policy_library.json  portfolio.json  regime_history.json  stock_pick_score_history.json
docs/: architecture_v2.md  context_map.md  report_review_lessons.md  status_snapshot.md
docs/history/: 2026-03.md  2026-04.md  architecture_v2.md  strong_factors_v1.md
docs/plans/: strategy.md  strong_factors.md  tushare_10000.md
docs/process/: feature_fast_loop.md
docs/prompts/: README.md  external_factor_plan_reviewer.md  external_financial_divergent_reviewer.md  external_financial_reviewer.md  external_financial_structural_reviewer.md  external_research_reviewer.md  external_review_convergence_loop.md  external_strategy_plan_reviewer.md  financial_editor_writer.md  (+2 more)
skill/: SKILL.md
src/: __init__.py  scheduler.py
tests/: __init__.py  test_scheduler.py
(+300 files in other folders)
